@@ -28,8 +28,11 @@ import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
 
+import io.netty.buffer.ByteBuf;
+import org.apache.cassandra.config.DatabaseDescriptor;
 import org.apache.cassandra.io.compress.BufferType;
 import org.apache.cassandra.io.util.RandomAccessReader;
+import org.apache.cassandra.net.GlobalBufferPoolAllocator;
 
 import static org.junit.Assert.*;
 
@@ -144,6 +147,64 @@ public class BufferPoolTest
     public void testRecycle()
     {
         requestUpToSize(RandomAccessReader.DEFAULT_BUFFER_SIZE, 3 * BufferPool.NORMAL_CHUNK_SIZE);
+    }
+
+    @Test
+    public void testBufferDefaultMaxCapacity()
+    {
+        DatabaseDescriptor.clientInitialization();
+        ByteBuf noMaxCapacity = GlobalBufferPoolAllocator.instance.buffer(100);
+        noMaxCapacity.writeBytes(new byte[100]);
+        assertEquals(100, noMaxCapacity.readableBytes());
+        noMaxCapacity.release();
+        assertEquals(0, GlobalBufferPoolAllocator.instance.usedSizeInBytes());
+    }
+
+    @Test
+    public void testBufferWithMaxCapacity()
+    {
+        DatabaseDescriptor.clientInitialization();
+        ByteBuf buffer = GlobalBufferPoolAllocator.instance.buffer(100, 500);
+        buffer.writeBytes(new byte[500]);
+        assertEquals(500, buffer.readableBytes());
+        assertEquals(0, GlobalBufferPoolAllocator.instance.usedSizeInBytes());
+        buffer.release();
+    }
+
+    @Test
+    public void testBufferContentAfterResize() {
+        DatabaseDescriptor.clientInitialization();
+        ByteBuf buffer = GlobalBufferPoolAllocator.instance.buffer(200, 300);
+        assertEquals(200, GlobalBufferPoolAllocator.instance.usedSizeInBytes());
+
+        byte[] content = new byte[300];
+
+        Random rand = new Random();
+        rand.nextBytes(content);
+
+        buffer.writeBytes(Arrays.copyOfRange(content, 0, 200));
+        assertEquals(200, GlobalBufferPoolAllocator.instance.usedSizeInBytes());
+
+        buffer.writeBytes(Arrays.copyOfRange(content, 200, 300));
+
+        byte[] bufferContent = new byte[300];
+        buffer.readBytes(bufferContent);
+        assertArrayEquals(content, bufferContent);
+        assertEquals(0, GlobalBufferPoolAllocator.instance.usedSizeInBytes());
+        buffer.release();
+    }
+
+    @Test(expected = IndexOutOfBoundsException.class)
+    public void testBufferExceedMaxCapacity()
+    {
+        DatabaseDescriptor.clientInitialization();
+        ByteBuf maxCapacity = GlobalBufferPoolAllocator.instance.buffer(100, 200);
+        try
+        {
+            maxCapacity.writeBytes(new byte[300]);
+        } finally {
+            maxCapacity.release();
+        }
     }
 
     private void requestDoubleMaxMemory()
